--- a/img/public/index.css
+++ b/img/public/index.css
@@ -30,7 +30,7 @@ h1 {
   margin: 0 0 0.25em;
 }
 
-.controls {
+#controls {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -38,8 +38,7 @@ h1 {
   margin-bottom: 1.5em;
 }
 
-.format-label,
-.quality-label {
+label {
   display: flex;
   align-items: center;
   gap: 0.4em;
@@ -105,7 +104,7 @@ button {
   }
 }
 
-.results {
+#results {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
   gap: 1em;
