--- a/irclogs/public/index.css
+++ b/irclogs/public/index.css
@@ -1,30 +1,6 @@
-:root {
-  font-family: sans-serif;
-  font-size: 1.25rem;
-  background-color: #19151b;
-  color: #ffe3fb;
-}
-
-html,
-body {
-  margin: 0;
-  padding: 0;
-}
-
-main {
-  max-width: 960px;
-  padding: 1em;
-  margin: 0 auto;
-}
-
-header {
-  margin-bottom: 1em;
-}
-
 a {
-  color: #b57fdc;
   text-decoration: none;
-  border-bottom: 1px solid #b57fdc;
+  border-bottom: 1px solid var(--accent);
 }
 
 aside {
@@ -32,44 +8,19 @@ aside {
   font-size: 0.8em;
 }
 
-input[type="text"] {
-  padding: 0.25em;
-  margin: 0.125em;
-  font-size: 1.125rem;
-  width: 8ch;
-  outline: none;
-  border-radius: 0.25em;
-  background-color: #ffffff;
-  border: 2px solid #ffffff;
-  color: black;
-
-  &:focus {
-    border-color: rgb(141, 255, 208);
-  }
-}
-
 #log-input {
   width: 100%;
   min-height: 6em;
   max-height: 8lh;
-  background: #110e12;
-  color: #ffe3fb;
-  border: 1px solid #4a3a50;
-  border-radius: 0.25em;
-  padding: 0.5em;
+  background: oklch(from var(--bg) calc(l - 4) c h);
+  border-color: oklch(from var(--border) calc(l - 12) c h);
   font-family: monospace;
   font-size: 0.8rem;
   box-sizing: border-box;
-  outline: none;
-  resize: vertical;
   margin-bottom: 1em;
 
   &::placeholder {
-    color: #7a5a80;
-  }
-
-  &:focus {
-    border-color: #b57fdc;
+    color: oklch(from var(--text) l c h / 0.5);
   }
 }
 
@@ -86,7 +37,7 @@ input[type="text"] {
 }
 
 .log-time {
-  color: #7a5a80;
+  color: oklch(from var(--text) l c h / 0.5);
   white-space: nowrap;
   user-select: none;
 }
@@ -94,7 +45,7 @@ input[type="text"] {
 .log-nick {
   text-align: right;
   white-space: nowrap;
-  color: #b57fdc;
+  color: var(--accent);
   font-weight: bold;
 }
 
@@ -105,7 +56,7 @@ input[type="text"] {
 .log-join {
   & .log-nick,
   & .log-text {
-    color: #5a7a5a;
+    color: oklch(55% 0.1 145);
     font-style: italic;
   }
 }
@@ -113,7 +64,7 @@ input[type="text"] {
 .log-action {
   & .log-nick,
   & .log-text {
-    color: #d4a8e0;
+    color: oklch(from var(--accent) calc(l + 10) c h);
     font-style: italic;
   }
 }
